--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Maven"
         tools:targetApi="31">
         <activity
+            android:name=".SubjectsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,9 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.maven.Login" />
-        <activity android:name="com.example.maven.Dashboard" />
-
+        <activity android:name=".Login" />
+        <activity android:name=".Dashboard" />
+        <activity android:name=".OrganizerDashboard" />
+        <activity android:name=".ExaminerDashboard" />
     </application>
 
 </manifest>
