functioning basic flashcard app, no exam mode yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
 
         <activity android:name=".ExaminerDeckOverview" />
         <activity android:name=".ExaminerCreateCard" />
+        <activity android:name=".ExaminerCardHighlight" />
 
     </application>
 
