--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Maven"
         tools:targetApi="31">
         <activity
+            android:name=".ReminderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TimerActivity"
+            android:exported="false" />
+        <activity
             android:name=".CalendarActivity"
             android:exported="false" />
         <activity
@@ -39,15 +45,14 @@
         <activity
             android:name=".DeckActivity"
             android:windowSoftInputMode="adjustResize" />
-
         <activity android:name=".ExaminerDeckOverview" />
         <activity android:name=".ExaminerCreateCard" />
         <activity
-            android:name="com.example.maven.ToDoListActivity"
+            android:name=".ToDoListActivity"
             android:label="@string/todo_list_activity_label">
+
             <!-- Intent filters or other attributes if applicable -->
         </activity>
-
     </application>
 
 </manifest>
