Transparent Background for Organizer buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,13 @@
 
             <!-- Intent filters or other attributes if applicable -->
         </activity>
+
+        <activity
+            android:name=".ExaminerCardHighlight"
+            android:label="Examiner Card Highlight">
+        </activity>
+
+
     </application>
 
 </manifest>
