displayed the list of decks in exam mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".ExaminerExamMode" />
         <activity android:name=".ExaminerExamModeBlitz" />
         <activity android:name=".ExaminerExamModeResults" />
+        <activity android:name=".ExaminerExamModeNonBlitz" />
 
     </application>
 
