displayed the list of decks in exam mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         <activity android:name=".ExaminerExamModeBlitz" />
         <activity android:name=".ExaminerExamModeResults" />
         <activity android:name=".ExaminerExamModeNonBlitz" />
+        <activity android:name=".ExaminerProgressDashboardDeckList" />
+        <activity android:name=".ExaminerProgressReport" />
 
     </application>
 
